# avdl-rs

crates/avdl-parser/: Cargo.toml
crates/avdl-parser/src/: parser.rs
crates/avrokit/: Cargo.toml
crates/avrokit/src/: main.rs
