[package]
name = "avrokit"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avdl-parser = { path = "../avdl-parser" }
apache-avro = { version = "0.15.0" }
clap = { version = "4.0.32", features = ["derive"] }
serde_json = "1.0"
